short urls and redirects for pdf route
